<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainFragment"
        android:id="@+id/parentLayout">

        <TextView
            android:id="@+id/question_txt"
            android:layout_width="340dp"
            android:layout_height="122dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="24dp"
            android:fontFamily="roboto"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/answer_false_btn"
            android:layout_width="132dp"
            android:layout_height="54dp"
            android:layout_marginEnd="50dp"
            android:text="@string/answer_false_btn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/answer_true_btn"
            app:layout_constraintTop_toBottomOf="@+id/check_answer_txt"
            app:layout_constraintVertical_bias="0.025" />

        <Button
            android:id="@+id/answer_true_btn"
            android:layout_width="132dp"
            android:layout_height="54dp"
            android:layout_marginStart="50dp"
            android:text="@string/answer_true_btn"
            app:layout_constraintBaseline_toBaselineOf="@+id/answer_false_btn"
            app:layout_constraintEnd_toStartOf="@+id/answer_false_btn"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/move_back_btn"
            android:layout_width="108dp"
            android:layout_height="50dp"
            android:layout_marginStart="70dp"
            android:text="@string/move_backward_btn"
            app:layout_constraintBaseline_toBaselineOf="@+id/move_fwd_btn"
            app:layout_constraintEnd_toStartOf="@+id/move_fwd_btn"
            app:layout_constraintHorizontal_bias="0.647"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/move_fwd_btn"
            android:layout_width="108dp"
            android:layout_height="50dp"
            android:layout_marginEnd="70dp"
            android:text="@string/move_forward_btn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/move_back_btn"
            app:layout_constraintTop_toBottomOf="@+id/answer_false_btn"
            app:layout_constraintVertical_bias="0.032" />

        <TextView
            android:id="@+id/check_answer_txt"
            android:layout_width="96dp"
            android:layout_height="76dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.462"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/question_txt" />

        <Button
            android:id="@+id/cheat_btn"
            android:layout_width="152dp"
            android:layout_height="60dp"
            android:text="@string/cheat_btn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/move_back_btn"
            app:layout_constraintVertical_bias="0.089" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>